k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: argo-canary
    app.kubernetes.io/instance: argo-canary
  name: argo-canary-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: argo-canary
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: argo-canary-preview
    app.kubernetes.io/instance: argo-canary
  name: argo-canary-preview-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: argo-canary-preview
status:
  loadBalancer: {}
