k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # annotations:
  #   ingress.kubernetes.io/rewrite-target: /
  #   ingress.kubernetes.io/ssl-redirect: 'false'
  #   nginx.ingress.kubernetes.io/rewrite-target: /
  #   nginx.ingress.kubernetes.io/ssl-redirect: 'false'
  name: argo-hack
  namespace: default
spec:
  rules:
    - host: argohack.dev
      http:
        paths:
          - backend:
              service:
                name: argo-hack
                port:
                  number: 443
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
